--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,9 +44,9 @@ jobs:
         host: ${{ secrets.VPS_HOST }}
         username: ${{ secrets.VPS_USERNAME }}
         key: ${{ secrets.VPS_SSH_KEY }}
-        envs: GITHUB_TOKEN
         script: |
           set -euo pipefail
+          GIT_TOKEN="${GITHUB_TOKEN:-${{ secrets.GITHUB_TOKEN }}}"
 
           # Ensure rsync is available
           if ! command -v rsync >/dev/null 2>&1; then
@@ -77,7 +77,7 @@ jobs:
           # Clone/pull latest code
           cd /tmp
           rm -rf unknownCRUD
-          git clone https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}.git unknownCRUD
+          git clone https://x-access-token:${GIT_TOKEN}@github.com/${{ github.repository }}.git unknownCRUD
           cd unknownCRUD
           
           # Build frontend
